<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentOrder">

    <ImageView
        android:id="@+id/image_Oders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/icon_order"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_Food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_food"
        app:layout_constraintEnd_toEndOf="@+id/image_Oders"
        app:layout_constraintStart_toStartOf="@+id/image_Oders"
        app:layout_constraintTop_toBottomOf="@+id/image_Oders" />

    <ImageView
        android:id="@+id/image_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_map"
        app:layout_constraintEnd_toEndOf="@+id/image_Food"
        app:layout_constraintStart_toStartOf="@+id/image_Food"
        app:layout_constraintTop_toBottomOf="@+id/image_Food" />

    <ImageView
        android:id="@+id/image_Cash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_cash"
        app:layout_constraintEnd_toEndOf="@+id/image_map"
        app:layout_constraintStart_toStartOf="@+id/image_map"
        app:layout_constraintTop_toBottomOf="@+id/image_map" />

    <TextView
        android:id="@+id/txt_OderID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/orderID"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/image_Oders"
        app:layout_constraintStart_toEndOf="@+id/image_Oders"
        app:layout_constraintTop_toTopOf="@+id/image_Oders" />

    <TextView
        android:id="@+id/txt_Food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/food"
        app:layout_constraintBottom_toBottomOf="@+id/image_Food"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt_OderID"
        app:layout_constraintTop_toTopOf="@+id/image_Food"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/txt_Map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="228dp"
        android:text="@string/map"
        app:layout_constraintBottom_toBottomOf="@+id/image_map"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt_Food"
        app:layout_constraintTop_toTopOf="@+id/image_map"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txt_Cash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="276dp"
        android:text="@string/cash"
        app:layout_constraintBottom_toBottomOf="@+id/image_Cash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt_Map"
        app:layout_constraintTop_toTopOf="@+id/image_Cash"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txt_OderIDDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:text="@string/id"
        app:layout_constraintBottom_toBottomOf="@+id/txt_OderID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/txt_OderID"
        app:layout_constraintTop_toTopOf="@+id/txt_OderID"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/txt_CashDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="204dp"
        android:layout_marginEnd="8dp"
        android:text="213,000"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/txt_Cash"
        app:layout_constraintEnd_toStartOf="@+id/textView7"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/txt_Cash"
        app:layout_constraintTop_toTopOf="@+id/txt_Cash"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="VND"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/txt_CashDetail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txt_CashDetail"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_border_top_greendark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_CashDetail"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:src="@drawable/ic_driver"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/txt_DriverName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="212dp"
            android:text="Nguyễn Ngọc Tâm"
            android:textColor="@color/colorPrimary"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="@+id/imageView4" />

        <TextView
            android:id="@+id/txt_DriverNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:text="81H3 - 09217"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            app:layout_constraintEnd_toEndOf="@+id/txt_DriverName"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/txt_DriverName"
            app:layout_constraintTop_toBottomOf="@+id/txt_DriverName" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorPrimary"
        android:padding="10dp"
        android:text="Cancel Booking"
        android:textAllCaps="false"
        android:textColor="#FFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>